<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- Google API -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCNjV39mxq2G4P5K3ebshlgyoRq9IDyop4</string>
    <string name="google_place_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAYe9OJ2CySp8QtG531jnlfpmn-hJi5J38</string>

    <!-- Facebook -->
    <string name="facebook_application_id">489344649026288</string>
    <string name="fb_login_protocol_scheme">fb489344649026288</string>
    <string name="facebook_client_token">2f88cc0ae8aac52ddc5531499232aaea</string>

    <!-- CONTENT DESCRIPTION -->
    <string name="profile_pic">Profile picture</string>
    <string name="restaurant_pic">Restaurant picture</string>
    <string name="fab_choice">Restaurant choice</string>
    <string name="call_pic">Call picture</string>
    <string name="like_pic">Like picture</string>

    <!-- URLs -->
    <string name="url_nearby_search">https://maps.googleapis.com/maps/api/place/nearbysearch/</string>

    <!-- TEXTS -->
    <!-- Login buttons -->
    <string name="btn_login_google">Login with Google</string>
    <string name="btn_login_facebook">Login with Facebook</string>

    <!-- App Bar Title -->
    <string name="appbar_hungry">I\'m hungry !</string>
    <string name="appbar_workmates">Available workmates</string>

    <!-- Navigation Drawer -->
    <string name="nd_your_lunch">Your lunch</string>
    <string name="nd_settings">Settings</string>
    <string name="nd_logout">Logout</string>

    <!-- Bottom navigation -->
    <string name="bn_map">Map View</string>
    <string name="bn_list">List View</string>
    <string name="bn_workmates">Workmates</string>

    <!-- Restaurant details buttons -->
    <string name="btn_call">Call</string>
    <string name="btn_like">Like</string>
    <string name="btn_website">Website</string>

    <!-- Permissions request -->
    <string name="rationale_rq_location">This app needs access to your location.</string>
    <string name="rationale_rq_location_second">This app needs access to your location to work properly.</string>
    <string name="rationale_rq_notification">Remind me the restaurant I choose.</string>

    <!-- Place Recycler -->
    <string name="open_now">Open now</string>
    <string name="close_now">Close now</string>
    <string name="no_opening_hours">No information</string>
    <string name="no_rating">No rating</string>

    <!-- Workmates RV -->
    <string name="eat_at"> eat at </string>
    <string name="not_chosen"> haven\'t chosen yet.</string>

    <!-- Notification -->
    <string name="notification_title">Reminder</string>
    <string name="default_notification_text">You haven\'t chosen a restaurant yet.</string>
    <string name="eat_notification">You eat at : </string>

</resources>