<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.PlaceDetailsActivity">

    <ImageView
        android:id="@+id/iv_restaurant_picture"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:contentDescription="@string/restaurant_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_place_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="170dp"
        android:backgroundTint="@color/white"
        app:rippleColor="@color/orange_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fui_ic_check_circle_black_128dp"
        android:contentDescription="@string/fab_choice" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_toolbar"
        app:layout_constraintBottom_toTopOf="@+id/container_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_restaurant_picture">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            tools:text="@string/url_nearby_search"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_opening_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            tools:text="@string/open_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/container_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_information">

        <TextView
            android:id="@+id/btn_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/btn_call"
            android:textAllCaps="true"
            android:textColor="@color/orange_toolbar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_call" />

        <TextView
            android:id="@+id/btn_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/btn_like"
            android:textAllCaps="true"
            android:textColor="@color/orange_toolbar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableTint="@color/darkslategray"
            app:drawableTopCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/btn_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/btn_website"
            android:textAllCaps="true"
            android:textColor="@color/orange_toolbar"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_public" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>